# lr2-launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  lr2-launcher.pot
.cargo/: config.toml
.github/workflows/: rust.yml
src/: audio.rs  directsound.rs  launcher.rs  launcher_config.rs  lr2.rs  lr2_config.rs  main.rs  openlr2.rs  player.rs  process.rs  utils.rs  wasapi.rs
src/audio/: windows.rs
src/audio/windows/: asio.rs  directsound.rs  wasapi.rs
src/launcher/: binary_type.rs  config.rs
src/lr2/: lr2_config.rs
src/openlr2/: openlr2_config.rs  update.rs
ui/: globals.slint  launcher.slint  new_user.slint
ui/components/: int_edit.slint  jukebox.slint
ui/pages/: home_page.slint  jukebox_page.slint  openlr2_page.slint  page.slint  pages.slint  play_options_page.slint  system_options_page.slint
