cargo-features = ["profile-rustflags", "trim-paths", "panic-immediate-abort"]

[package]
name = "lr2-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
bitflags = "2.13.0"
encoding_rs = "0.8.35"
quick-xml = { version = "0.41.0", features = ["encoding", "serialize"] }
rfd = "0.17.2"
serde = "1.0.228"
serde_with = "3.21.0"
slint = { version = "1.17.1", default-features = false, features = ["compat-1-2", "std", "gettext", "backend-winit", "renderer-femtovg"] }
turso = "0.6.1"
windows = { version = "0.62.2", features = ["Win32_Media_Audio_DirectSound", "Win32_Media_Audio", "Win32_System_Com", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com_StructuredStorage", "Win32_Devices_FunctionDiscovery", "Win32_System_Variant"] }
windows-registry = "0.6.1"

[build-dependencies]
slint-build = "1.17.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "immediate-abort"
trim-paths = "all"
rustflags = ["-Zlocation-detail=none"]
